Cherry-pick a4ada8aea580. rdar://122109093

ARM64 build fix; Second attempt
    https://bugs.webkit.org/show_bug.cgi?id=268558
    rdar://122109093

    Reviewed by Mark Lam.

    * Source/JavaScriptCore/assembler/FastJITPermissions.h:
    (threadSelfRestrictSupported):
    (threadSelfRestrictRWXToRW):
    (threadSelfRestrictRWXToRX):
    * Source/JavaScriptCore/jit/ExecutableAllocator.cpp:
    (JSC::initializeJITPageReservation):
    * Source/WTF/wtf/PlatformUse.h:

    Canonical link: https://commits.webkit.org/273926@main

Canonical link: https://commits.webkit.org/272448.458@safari-7618-branch